--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 crispy-bootstrap5==0.7
 Django==4.1.3
+django-comments-dab==2.8.0
 django-crispy-forms==1.14.0
+six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
